--- a/CSS/style.css
+++ b/CSS/style.css
@@ -333,9 +333,12 @@ ul {
   background: rgba(99, 64, 64, 0.5);
   width: 100%;
   height: 100vh;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .window__form {
@@ -345,4 +348,9 @@ ul {
   border-radius: 10px;
   padding: 20px;
   font-size: 20px;
+}
+
+.window:target {
+  
+  display: flex;
 }
