--- a/CSS/style.css
+++ b/CSS/style.css
@@ -329,20 +329,29 @@ ul {
   margin-bottom: 15px;
 }
 
+
 .window {
-  background: rgba(99, 64, 64, 0.5);
-  width: 100%;
   height: 100vh;
-  display: none;
+  width: 100%;
   justify-content: center;
-  align-items: center;
   position: fixed;
+  align-items: center;
+  background: rgb(0, 0, 0,0.5);
   top: 0;
   left: 0;
+  z-index: 99;
+  display: flex;
+  transform: scale(0);
+  transition: 0.5s;
+  transform-origin: 50% girg0;
 }
 
-.window__form {
-  width: 400px;
+
+
+
+.window__form{
+  max-width: 400px;
+  width: 100%;
   height: 500px;
   background: #fff;
   border-radius: 10px;
@@ -350,7 +359,6 @@ ul {
   font-size: 20px;
 }
 
-.window:target {
-  
-  display: flex;
+.window:target{
+  transform: scale(1);
 }
